Added Google AIs to saction routing rules.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -520,6 +520,10 @@
                                         <label for="bypassOpenAi">ChatGPT</label>
                                     </div>
                                     <div class="routing">
+                                        <input type="checkbox" id="bypassGoogleAi" name="bypassGoogleAi" value="true">
+                                        <label for="bypassGoogleAi">Google AIs</label>
+                                    </div>
+                                    <div class="routing">
                                         <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true">
                                         <label for="bypassMicrosoft">Microsoft</label>
                                     </div>
