Fixed VMess bug, updated docs.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -66,11 +66,11 @@
                         <label for="logLevel">🎚️ Log Level</label>
                         <div>
                             <select id="logLevel" name="logLevel">
-                                <option value="none">none</option>
-                                <option value="warning">warning</option>
-                                <option value="error">error</option>
-                                <option value="info">info</option>
-                                <option value="debug">debug</option>
+                                <option value="none">Disabled</option>
+                                <option value="warning">Warning</option>
+                                <option value="error">Error</option>
+                                <option value="info">Info</option>
+                                <option value="debug">Debug</option>
                             </select>
                         </div>
                     </div>
@@ -326,15 +326,6 @@
                         </label>
                         <div>
                             <textarea type="text" id="warpEndpoints" name="warpEndpoints" rows="1" required></textarea>
-                        </div>
-                    </div>
-                    <div class="form-control">
-                        <label for="warpFakeDNS">🧢 Fake DNS</label>
-                        <div>
-                            <select id="warpFakeDNS" name="warpFakeDNS">
-                                <option value="true">Enabled</option>
-                                <option value="false">Disabled</option>
-                            </select>
                         </div>
                     </div>
                     <div class="form-control">
