Added optional Warp remote DNS.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -25,7 +25,7 @@
             <details>
                 <summary>
                     <h3>Common
-                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/fragment/"
+                        <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/configuration/common/"
                             target="_blank" title="Help">
                             <span class="material-symbols-rounded">info</span>
                         </a>
@@ -316,6 +316,12 @@
                     </h3>
                 </summary>
                 <div class="section">
+                    <div class="form-control">
+                        <label for="warpRemoteDNS">🌏 remote DNS</label>
+                        <div>
+                            <input type="text" id="warpRemoteDNS" name="warpRemoteDNS" required>
+                        </div>
+                    </div>
                     <div class="form-control">
                         <label for="warpEndpoints">
                             ✨ Endpoints
