--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div id="none-tls" class="form-control" style="display: none;">
-                        <label for="non-tls-ports">🔓 None TLS Ports</label>
+                        <label for="non-tls-ports">🔓 non-TLS Ports</label>
                         <div>
                             <div id="non-tls-ports" class="rules inner-container"></div>
                         </div>
