Moved IPv6 to common settings, refactored.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -54,6 +54,15 @@
                         </div>
                     </div>
                     <div class="form-control">
+                        <label for="enableIPv6">🔛 IPv6</label>
+                        <div>
+                            <select id="enableIPv6" name="enableIPv6">
+                                <option value="true">Enabled</option>
+                                <option value="false">Disabled</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-control">
                         <label for="allowLANConnection">⛔ Allow connections from LAN</label>
                         <div>
                             <select id="allowLANConnection" name="allowLANConnection">
@@ -108,15 +117,6 @@
                         </label>
                         <div>
                             <textarea type="text" id="cleanIPs" name="cleanIPs" rows="1"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-control">
-                        <label for="VLTRenableIPv6">🔛 IPv6</label>
-                        <div>
-                            <select id="VLTRenableIPv6" name="VLTRenableIPv6">
-                                <option value="true">Enabled</option>
-                                <option value="false">Disabled</option>
-                            </select>
                         </div>
                     </div>
                     <div class="form-control">
@@ -332,15 +332,6 @@
                         </label>
                         <div>
                             <textarea type="text" id="warpEndpoints" name="warpEndpoints" rows="1" required></textarea>
-                        </div>
-                    </div>
-                    <div class="form-control">
-                        <label for="warpEnableIPv6">🔛 IPv6</label>
-                        <div>
-                            <select id="warpEnableIPv6" name="warpEnableIPv6">
-                                <option value="true">Enabled</option>
-                                <option value="false">Disabled</option>
-                            </select>
                         </div>
                     </div>
                     <div class="form-control">
