Expanded Fragment profiles, Added min version to Xray configs.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -263,6 +263,7 @@
                                 <option value="low">Low</option>
                                 <option value="medium">Medium</option>
                                 <option value="high">High</option>
+                                <option value="severe">Severe</option>
                             </select>
                         </div>
                     </div>
