--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -216,7 +216,7 @@
                                 <label for="proxyIPs">
                                     📍 Proxy IPs / Domains
                                     <a class="scanner"
-                                        href="https://www.nslookup.io/domains/bpb.yousef.isegaro.com/dns-records/"
+                                        href="/proxy-ip"
                                         title="Proxy IPs" target="_blank" rel="noopener noreferrer">
                                         <span class="material-symbols-rounded">open_in_new</span>
                                     </a>
