--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -215,9 +215,8 @@
                             <div class="form-control">
                                 <label for="proxyIPs">
                                     📍 Proxy IPs / Domains
-                                    <a class="scanner"
-                                        href="/proxy-ip"
-                                        title="Proxy IPs" target="_blank" rel="noopener noreferrer">
+                                    <a class="scanner" href="/proxy-ip" title="Proxy IPs" target="_blank"
+                                        rel="noopener noreferrer">
                                         <span class="material-symbols-rounded">open_in_new</span>
                                     </a>
                                 </label>
@@ -803,6 +802,95 @@
                             </button>
                             <button title="Download config" onclick="dlURL('fragment', 'sing-box')">
                                 <span class="material-symbols-rounded">download</span>
+                            </button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </details>
+        <details class="details">
+            <summary>
+                <h3>
+                    Raw (without settings)
+                    <a href="https://bia-pain-bache.github.io/BPB-Worker-Panel/usage/raw/" target="_blank"
+                        title="Help">
+                        <span class="material-symbols-rounded">info</span>
+                    </a>
+                </h3>
+            </summary>
+            <div class="table-container">
+                <table id="normal-configs-table">
+                    <tr>
+                        <td>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>v2rayNG</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>MahsaNG</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>v2rayN</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>v2rayN-PRO</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Shadowrocket</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Streisand</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>PassWall</span>
+                            </div>
+                        </td>
+                        <td>
+                            <button title="Display QR code"
+                                onclick="openQR('raw', 'xray', 'Raw', 'Raw Subscription')">
+                                <span class="material-symbols-rounded">qr_code</span>
+                            </button>
+                            <button title="Copy subscription URL" onclick="subURL('raw', 'xray', 'Raw')">
+                                <span class="material-symbols-rounded">content_copy</span>
+                            </button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>husi</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Nekobox</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Nekoray</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Hiddify</span>
+                            </div>
+                            <div>
+                                <span class="material-symbols-rounded">verified</span>
+                                <span>Karing</span>
+                            </div>
+                        </td>
+                        <td>
+                            <button title="Display QR code"
+                                onclick="openQR('raw', 'sing-box', 'Raw', 'Raw Subscription')">
+                                <span class="material-symbols-rounded">qr_code</span>
+                            </button>
+                            <button title="Copy subscription URL" onclick="subURL('raw', 'sing-box', 'Raw')">
+                                <span class="material-symbols-rounded">content_copy</span>
                             </button>
                         </td>
                     </tr>
